deploy: 568a1bd1634a5937bbd935be1f7653c1491aa7b8

--- a/manifest.json
+++ b/manifest.json
@@ -3453,7 +3453,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.SpellSystem.DummyCast.html",
-          "hash": "N5MXCAAYD194CawdsKu/+A=="
+          "hash": "wAhom04adbUo1myvJ3/Y4Q=="
         }
       },
       "is_incremental": false,
@@ -3513,7 +3513,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.SpellSystem.Spell.html",
-          "hash": "aDULgt66yfMtf0UCaPXVpA=="
+          "hash": "UGJX67JUd+PVgeQBftg1tg=="
         }
       },
       "is_incremental": false,
@@ -3574,6 +3574,18 @@
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Spells.ChannelAnySpell.html",
           "hash": "BmkHCTu5qaOjOtH6F3EHBg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/MacroTools.Spells.ChannelAnySpellCaster.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/MacroTools.Spells.ChannelAnySpellCaster.html",
+          "hash": "oUpj6HjlqKsmiNu/ebEHsQ=="
         }
       },
       "is_incremental": false,
@@ -3969,7 +3981,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Spells.html",
-          "hash": "4UP2axiz1rbfsezC0bKjOg=="
+          "hash": "y4aQgSRt+2qhY9alJ80ZsA=="
         }
       },
       "is_incremental": false,
@@ -4149,7 +4161,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/toc.html",
-          "hash": "CFUgegggYfTg/We9gAceTA=="
+          "hash": "eKZl0o9I4rb6sK7om8wMsQ=="
         }
       },
       "is_incremental": false,
@@ -9036,7 +9048,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 745,
+          "total_file_count": 746,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
